[tool.poetry]
name = "ctf-platform"
version = "1.0.0"
description = "A platform for ctf competitions"
authors = ["Minigrim0 <grimauflorent@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "ctf_platform"}]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.7"
django-colorfield = "^0.8.0"
django-crispy-forms = "^2.0"
django-extensions = "^3.2.1"

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
pylint = "^2.17.0"
django-debug-toolbar = "^3.8.1"

[tool.poetry.group.prod.dependencies]
gunicorn = "^20.1.0"
psycopg2 = "^2.9.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
